Fixed CSS issue with media section images. Constrained their height so that they don't get too large.

--- a/html/css/style.less
+++ b/html/css/style.less
@@ -1267,8 +1267,10 @@ input, textarea, button{
 #media{
 	.images{
 		a, a:visited{
+			overflow: hidden;
 			float: left;
 			display: block;
+			max-height: 105px;
 			
 			img{
 				width: 100%;
